--- a/index.htm
+++ b/index.htm
@@ -15,11 +15,11 @@
 <link rel="canonical" href="https://conferenceradar.com/">
 <link rel="icon" type="/image/png" href="https://amphtml.fun/seo808/assets/icon.webp?crop=center&amp;height=32&amp;v=1708896726&amp;width=32">
 <link rel="preconnect" href="https://fonts.shopifycdn.com/" crossorigin="">
-<title>JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</title>
+<title>JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</title>
 <meta name="description" content="JUDOLBET88 Merupakan Salah Satu Fitur Teranyar Dari Link Slot Online Populer Mahjong Ways 2 Terpercaya Mudah Maxwin Didukung Winrate Sadis 98.9%.">
 <meta property="og:site_name" content="JUDOLBET88">
 <meta property="og:url" content="https://conferenceradar.com/">
-<meta property="og:title" content="JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin">
+<meta property="og:title" content="JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin">
 <meta property="og:type" content="product">
 <meta property="og:description" content="JUDOLBET88 Merupakan Salah Satu Fitur Teranyar Dari Link Slot Online Populer Mahjong Ways 2 Terpercaya Mudah Maxwin Didukung Winrate Sadis 98.9%.">
 <meta name="google-site-verification" content="JTepFxLHEADbkoDKUfDhfNex-zR80VMyvqJl0iQrwdQ" />
@@ -28,7 +28,7 @@
 <meta property="og:image:width" content="610">
 <meta property="og:image:height" content="610"><meta property="og:price:amount" content="5.000,00">
 <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin">
+<meta name="twitter:title" content="JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin">
 <meta name="twitter:description" content="JUDOLBET88 Merupakan Salah Satu Fitur Teranyar Dari Link Slot Online Populer Mahjong Ways 2 Terpercaya Mudah Maxwin Didukung Winrate Sadis 98.9%.">
 <script type="text/javascript" async="" src="https://amphtml.fun/seo808/assets/trekkie.storefront.fc3f1aabbbf42bade5d1a83f4ea8b04c184cf3f3.min.js.download"></script>
 <script src="https://amphtml.fun/seo808/assets/constants.js.download" defer="defer"></script>
@@ -536,10 +536,10 @@ document.documentElement.classList.add('shopify-design-mode');
 </script>
 <link href="https://monorail-edge.shopifysvc.com/" rel="dns-prefetch">
 <script>(function(){if ("sendBeacon" in navigator && "performance" in window) {var session_token = document.cookie.match(/_shopify_s=([^;]*)/);function handle_abandonment_event(e) {var entries = performance.getEntries().filter(function(entry) {return /monorail-edge.shopifysvc.com/.test(entry.name);});if (!window.abandonment_tracked && entries.length === 0) {window.abandonment_tracked = true;var currentMs = Date.now();var navigation_start = performance.timing.navigationStart;var payload = {shop_id: 85817524517,url: window.location.href,navigation_start,duration: currentMs - navigation_start,session_token: session_token && session_token.length === 2 ? session_token[1] : "",page_type: "product"};window.navigator.sendBeacon("https://monorail-edge.shopifysvc.com/v1/produce", JSON.stringify({schema_id: "online_store_buyer_site_abandonment/1.1",payload: payload,metadata: {event_created_at_ms: currentMs,event_sent_at_ms: currentMs}}));}}window.addEventListener('pagehide', handle_abandonment_event);}}());</script>
-<script id="web-pixels-manager-setup">(function e(e,n,a,t,r){var o="function"==typeof BigInt&&-1!==BigInt.toString().indexOf("[native code]")?"modern":"legacy";window.Shopify=window.Shopify||{};var i=window.Shopify;i.analytics=i.analytics||{};var s=i.analytics;s.replayQueue=[],s.publish=function(e,n,a){return s.replayQueue.push([e,n,a]),!0};try{self.performance.mark("wpm:start")}catch(e){}var l=[a,"/wpm","/b",r,o.substring(0,1),".js"].join("");!function(e){var n=e.src,a=e.async,t=void 0===a||a,r=e.onload,o=e.onerror,i=document.createElement("script"),s=document.head,l=document.body;i.async=t,i.src=n,r&&i.addEventListener("load",r),o&&i.addEventListener("error",o),s?s.appendChild(i):l?l.appendChild(i):console.error("Did not find a head or body element to append the script")}({src:l,async:!0,onload:function(){var a=window.webPixelsManager.init(e);n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],r=e[2];a.publishCustomEvent(n,t,r)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor},onerror:function(){var n=e.storefrontBaseUrl.replace(/\/$/,""),a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),r=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:t||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(l," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,r))return!0}catch(e){}var o=new XMLHttpRequest;try{return o.open("POST",a,!0),o.setRequestHeader("Content-Type","text/plain"),o.send(r),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}})})({shopId: 85817524517,storefrontBaseUrl: "https://asset-file.myshopify.com",cdnBaseUrl: "https://asset-file.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["f6570685"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"APP","purposes":["ANALYTICS"]},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"CUSTOM","purposes":["ANALYTICS"]}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}});},"https://asset-file.myshopify.com/cdn","0.0.436","a5bcf74bw4e3defe8p5a359d5bm27f1ff6f",);</script><script async="" src="https://amphtml.fun/seo808/assets/ba5bcf74bw4e3defe8p5a359d5bm27f1ff6fm.js.download"></script><script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
+<script id="web-pixels-manager-setup">(function e(e,n,a,t,r){var o="function"==typeof BigInt&&-1!==BigInt.toString().indexOf("[native code]")?"modern":"legacy";window.Shopify=window.Shopify||{};var i=window.Shopify;i.analytics=i.analytics||{};var s=i.analytics;s.replayQueue=[],s.publish=function(e,n,a){return s.replayQueue.push([e,n,a]),!0};try{self.performance.mark("wpm:start")}catch(e){}var l=[a,"/wpm","/b",r,o.substring(0,1),".js"].join("");!function(e){var n=e.src,a=e.async,t=void 0===a||a,r=e.onload,o=e.onerror,i=document.createElement("script"),s=document.head,l=document.body;i.async=t,i.src=n,r&&i.addEventListener("load",r),o&&i.addEventListener("error",o),s?s.appendChild(i):l?l.appendChild(i):console.error("Did not find a head or body element to append the script")}({src:l,async:!0,onload:function(){var a=window.webPixelsManager.init(e);n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],r=e[2];a.publishCustomEvent(n,t,r)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor},onerror:function(){var n=e.storefrontBaseUrl.replace(/\/$/,""),a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),r=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:t||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(l," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,r))return!0}catch(e){}var o=new XMLHttpRequest;try{return o.open("POST",a,!0),o.setRequestHeader("Content-Type","text/plain"),o.send(r),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}})})({shopId: 85817524517,storefrontBaseUrl: "https://asset-file.myshopify.com",cdnBaseUrl: "https://asset-file.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["f6570685"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"APP","purposes":["ANALYTICS"]},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"CUSTOM","purposes":["ANALYTICS"]}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}});},"https://asset-file.myshopify.com/cdn","0.0.436","a5bcf74bw4e3defe8p5a359d5bm27f1ff6f",);</script><script async="" src="https://amphtml.fun/seo808/assets/ba5bcf74bw4e3defe8p5a359d5bm27f1ff6fm.js.download"></script><script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
 window.ShopifyAnalytics.meta = window.ShopifyAnalytics.meta || {};
 window.ShopifyAnalytics.meta.currency = 'IDR';
-var meta = {"product":{"id":9042780979493,"gid":"gid:\/\/shopify\/Product\/9042780979493","vendor":"JUDOLBET88","type":"Slot Machines","variants":[{"id":47933651157285,"price":500000,"name":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","public_title":"Slot Resmi","sku":"5000"}]},"page":{"pageType":"product","resourceType":"product","resourceId":9042780979493}};
+var meta = {"product":{"id":9042780979493,"gid":"gid:\/\/shopify\/Product\/9042780979493","vendor":"JUDOLBET88","type":"Slot Machines","variants":[{"id":47933651157285,"price":500000,"name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","public_title":"Slot Resmi","sku":"5000"}]},"page":{"pageType":"product","resourceType":"product","resourceId":9042780979493}};
 for (var attr in meta) {
 window.ShopifyAnalytics.meta[attr] = meta[attr];
 }</script>
@@ -694,8 +694,8 @@ var match = window.location.pathname.match(/checkouts\/(.+)\/(thank_you|post_pur
 var token = match? match[1]: undefined;
 if (!hasLoggedConversion(token)) {
 setCookieIfConversion(token);
-window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true});
-window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true,"referer":"https://conferenceradar.com/"});
+window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true});
+window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true,"referer":"https://conferenceradar.com/"});
 }
 });
 
@@ -1245,10 +1245,10 @@ Open media 1 in modal
 </div>
 <div class="product__info-wrapper grid__item scroll-trigger animate--slide-in">
 <product-info id="ProductInfo-template--22009923797285__main" data-section="template--22009923797285__main" data-url="/products/JUDOLBET88" class="product__info-container product__column-sticky"><p class="product__text inline-richtext">JUDOLBET88</p><div class="product__title">
-<h1>JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</h1>
+<h1>JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</h1>
 <a href="https://conferenceradar.com/" class="product__title">
 <h2 class="h1">
-JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin
+JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin
 </h2>
 </a>
 </div><div class="no-js-hidden" id="price-template--22009923797285__main" role="status">
@@ -1302,7 +1302,7 @@ Slot Resmi
 <span class="visually-hidden label-unavailable">Variant sold out or unavailable</span>
 </label>
 </fieldset><script type="application/json">
-[{"id":47933651157285,"title":"Slot Resmi","option1":"Slot Resmi","option2":null,"option3":null,"sku":"5000","requires_shipping":true,"taxable":true,"featured_image":null,"available":true,"name":"JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","public_title":"Slot Resmi","options":["Slot Resmi"],"price":500000,"weight":808000,"compare_at_price":null,"inventory_management":"shopify","barcode":"5000"}]
+[{"id":47933651157285,"title":"Slot Resmi","option1":"Slot Resmi","option2":null,"option3":null,"sku":"5000","requires_shipping":true,"taxable":true,"featured_image":null,"available":true,"name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","public_title":"Slot Resmi","options":["Slot Resmi"],"price":500000,"weight":808000,"compare_at_price":null,"inventory_management":"shopify","barcode":"5000"}]
 </script>
 </variant-selects><noscript class="product-form__noscript-wrapper-template--22009923797285__main">
 <div class="product-form__input">
@@ -1349,7 +1349,7 @@ Quantity
 <div class="price-per-item__container">
 <quantity-input class="quantity" data-url="/products/JUDOLBET88" data-section="template--22009923797285__main">
 <button class="quantity__button no-js-hidden disabled" name="minus" type="button">
-<span class="visually-hidden">Decrease quantity for JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</span>
+<span class="visually-hidden">Decrease quantity for JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</span>
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-minus" fill="none" viewBox="0 0 10 2">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M.5 1C.5.7.7.5 1 .5h8a.5.5 0 110 1H1A.5.5 0 01.5 1z" fill="currentColor">
 </path></svg>
@@ -1357,7 +1357,7 @@ Quantity
 </button>
 <input class="quantity__input" type="number" name="quantity" id="Quantity-template--22009923797285__main" data-cart-quantity="0" data-min="1" min="1" step="1" value="1" form="product-form-template--22009923797285__main" max="null">
 <button class="quantity__button no-js-hidden" name="plus" type="button">
-<span class="visually-hidden">Increase quantity for JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</span>
+<span class="visually-hidden">Increase quantity for JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</span>
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-plus" fill="none" viewBox="0 0 10 10">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1 4.51a.5.5 0 000 1h3.5l.01 3.5a.5.5 0 001-.01V5.5l3.5-.01a.5.5 0 00-.01-1H5.5L5.49.99a.5.5 0 00-1 .01v3.5l-3.5.01H1z" fill="currentColor">
 </path></svg>
@@ -1484,7 +1484,7 @@ hiddenInput.value = event.currentTarget.value;
 {
 "@context": "http://schema.org/",
 "@type": "Product",
-"name": "JUDOLBEJUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin",
+"name": "JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin",
 "url": "https://conferenceradar.com/",
 "image": [
 "https://iili.io/JjOhWYu.webp\u0026width=1920"
