--- a/index.htm
+++ b/index.htm
@@ -12,13 +12,13 @@
 <meta name="theme-color" content="">
 <link rel="amphtml" href="https://amp-judolbet88-jvc.pages.dev/">
 <link rel="preload" href="https://amp-judolbet88-jvc.pages.dev/" as="amphtml">
-<link rel="canonical" href="https://conferenceradar.com/">
+<link rel="canonical" href="http://conferenceradar.com/">
 <link rel="icon" type="/image/png" href="https://amphtml.fun/seo808/assets/icon.webp?crop=center&amp;height=32&amp;v=1708896726&amp;width=32">
 <link rel="preconnect" href="https://fonts.shopifycdn.com/" crossorigin="">
 <title>JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</title>
 <meta name="description" content="JUDOLBET88 Merupakan Salah Satu Fitur Teranyar Dari Link Slot Online Populer Mahjong Ways 2 Terpercaya Mudah Maxwin Didukung Winrate Sadis 98.9%.">
 <meta property="og:site_name" content="JUDOLBET88">
-<meta property="og:url" content="https://conferenceradar.com/">
+<meta property="og:url" content="http://conferenceradar.com/">
 <meta property="og:title" content="JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin">
 <meta property="og:type" content="product">
 <meta property="og:description" content="JUDOLBET88 Merupakan Salah Satu Fitur Teranyar Dari Link Slot Online Populer Mahjong Ways 2 Terpercaya Mudah Maxwin Didukung Winrate Sadis 98.9%.">
@@ -54,7 +54,7 @@ Shopify.routes = Shopify.routes || {};
 Shopify.routes.root = "/";</script>
 <script type="module">!function(o){(o.Shopify=o.Shopify||{}).modules=!0}(window);</script>
 <script>!function(o){function n(){var o=[];function n(){o.push(Array.prototype.slice.apply(arguments))}return n.q=o,n}var t=o.Shopify=o.Shopify||{};t.loadFeatures=n(),t.autoloadFeatures=n()}(window);</script>
-<script id="__st">var __st={"a":85817524517,"offset":25200,"reqid":"e9f44f22-1e84-41b5-b5e4-ad10e0451de4","pageurl":"https://conferenceradar.com/","u":"84a78dc933bc","p":"product","rtyp":"product","rid":9042780979493};</script>
+<script id="__st">var __st={"a":85817524517,"offset":25200,"reqid":"e9f44f22-1e84-41b5-b5e4-ad10e0451de4","pageurl":"http://conferenceradar.com/","u":"84a78dc933bc","p":"product","rtyp":"product","rid":9042780979493};</script>
 <script>window.ShopifyPaypalV4VisibilityTracking = true;</script>
 <script integrity="sha256-h4dvokWvGcvRSqiG7VnGqoonxF0k3NeoHPLSMjUGIz4=" data-source-attribution="shopify.loadfeatures" defer="defer" src="https://amphtml.fun/seo808/assets/load_feature-87876fa245af19cbd14aa886ed59c6aa8a27c45d24dcd7a81cf2d2323506233e.js.download" crossorigin="anonymous"></script>
 <script data-source-attribution="shopify.dynamic_checkout.dynamic.init">var Shopify=Shopify||{};Shopify.PaymentButton=Shopify.PaymentButton||{isStorefrontPortableWallets:!0,init:function(){window.Shopify.PaymentButton.init=function(){};var t=document.createElement("script");t.src="https://asset-file.myshopify.com/cdn/shopifycloud/portable-wallets/latest/portable-wallets.en.js",t.type="module",document.head.appendChild(t)}};
@@ -536,7 +536,7 @@ document.documentElement.classList.add('shopify-design-mode');
 </script>
 <link href="https://monorail-edge.shopifysvc.com/" rel="dns-prefetch">
 <script>(function(){if ("sendBeacon" in navigator && "performance" in window) {var session_token = document.cookie.match(/_shopify_s=([^;]*)/);function handle_abandonment_event(e) {var entries = performance.getEntries().filter(function(entry) {return /monorail-edge.shopifysvc.com/.test(entry.name);});if (!window.abandonment_tracked && entries.length === 0) {window.abandonment_tracked = true;var currentMs = Date.now();var navigation_start = performance.timing.navigationStart;var payload = {shop_id: 85817524517,url: window.location.href,navigation_start,duration: currentMs - navigation_start,session_token: session_token && session_token.length === 2 ? session_token[1] : "",page_type: "product"};window.navigator.sendBeacon("https://monorail-edge.shopifysvc.com/v1/produce", JSON.stringify({schema_id: "online_store_buyer_site_abandonment/1.1",payload: payload,metadata: {event_created_at_ms: currentMs,event_sent_at_ms: currentMs}}));}}window.addEventListener('pagehide', handle_abandonment_event);}}());</script>
-<script id="web-pixels-manager-setup">(function e(e,n,a,t,r){var o="function"==typeof BigInt&&-1!==BigInt.toString().indexOf("[native code]")?"modern":"legacy";window.Shopify=window.Shopify||{};var i=window.Shopify;i.analytics=i.analytics||{};var s=i.analytics;s.replayQueue=[],s.publish=function(e,n,a){return s.replayQueue.push([e,n,a]),!0};try{self.performance.mark("wpm:start")}catch(e){}var l=[a,"/wpm","/b",r,o.substring(0,1),".js"].join("");!function(e){var n=e.src,a=e.async,t=void 0===a||a,r=e.onload,o=e.onerror,i=document.createElement("script"),s=document.head,l=document.body;i.async=t,i.src=n,r&&i.addEventListener("load",r),o&&i.addEventListener("error",o),s?s.appendChild(i):l?l.appendChild(i):console.error("Did not find a head or body element to append the script")}({src:l,async:!0,onload:function(){var a=window.webPixelsManager.init(e);n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],r=e[2];a.publishCustomEvent(n,t,r)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor},onerror:function(){var n=e.storefrontBaseUrl.replace(/\/$/,""),a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),r=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:t||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(l," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,r))return!0}catch(e){}var o=new XMLHttpRequest;try{return o.open("POST",a,!0),o.setRequestHeader("Content-Type","text/plain"),o.send(r),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}})})({shopId: 85817524517,storefrontBaseUrl: "https://asset-file.myshopify.com",cdnBaseUrl: "https://asset-file.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["f6570685"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"APP","purposes":["ANALYTICS"]},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"CUSTOM","purposes":["ANALYTICS"]}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"https://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}});},"https://asset-file.myshopify.com/cdn","0.0.436","a5bcf74bw4e3defe8p5a359d5bm27f1ff6f",);</script><script async="" src="https://amphtml.fun/seo808/assets/ba5bcf74bw4e3defe8p5a359d5bm27f1ff6fm.js.download"></script><script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
+<script id="web-pixels-manager-setup">(function e(e,n,a,t,r){var o="function"==typeof BigInt&&-1!==BigInt.toString().indexOf("[native code]")?"modern":"legacy";window.Shopify=window.Shopify||{};var i=window.Shopify;i.analytics=i.analytics||{};var s=i.analytics;s.replayQueue=[],s.publish=function(e,n,a){return s.replayQueue.push([e,n,a]),!0};try{self.performance.mark("wpm:start")}catch(e){}var l=[a,"/wpm","/b",r,o.substring(0,1),".js"].join("");!function(e){var n=e.src,a=e.async,t=void 0===a||a,r=e.onload,o=e.onerror,i=document.createElement("script"),s=document.head,l=document.body;i.async=t,i.src=n,r&&i.addEventListener("load",r),o&&i.addEventListener("error",o),s?s.appendChild(i):l?l.appendChild(i):console.error("Did not find a head or body element to append the script")}({src:l,async:!0,onload:function(){var a=window.webPixelsManager.init(e);n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],r=e[2];a.publishCustomEvent(n,t,r)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor},onerror:function(){var n=e.storefrontBaseUrl.replace(/\/$/,""),a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),r=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:t||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(l," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,r))return!0}catch(e){}var o=new XMLHttpRequest;try{return o.open("POST",a,!0),o.setRequestHeader("Content-Type","text/plain"),o.send(r),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}})})({shopId: 85817524517,storefrontBaseUrl: "https://asset-file.myshopify.com",cdnBaseUrl: "https://asset-file.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["f6570685"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"APP","purposes":["ANALYTICS"]},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0575","apiClientId":"shopify-pixel","type":"CUSTOM","purposes":["ANALYTICS"]}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"http://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"47933651157285","image":{"src":"\/\/asset-file.myshopify.com\/cdn\/shop\/files\/images.webp?v=1707840870"},"price":{"amount":5000.0,"currencyCode":"IDR"},"product":{"id":"9042780979493","title":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","untranslatedTitle":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin","url":"http://conferenceradar.com/","vendor":"JUDOLBET88","type":"Slot Machines"},"sku":"5000","title":"Slot Resmi","untranslatedTitle":"Slot Resmi"}});},"https://asset-file.myshopify.com/cdn","0.0.436","a5bcf74bw4e3defe8p5a359d5bm27f1ff6f",);</script><script async="" src="https://amphtml.fun/seo808/assets/ba5bcf74bw4e3defe8p5a359d5bm27f1ff6fm.js.download"></script><script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
 window.ShopifyAnalytics.meta = window.ShopifyAnalytics.meta || {};
 window.ShopifyAnalytics.meta.currency = 'IDR';
 var meta = {"product":{"id":9042780979493,"gid":"gid:\/\/shopify\/Product\/9042780979493","vendor":"JUDOLBET88","type":"Slot Machines","variants":[{"id":47933651157285,"price":500000,"name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","public_title":"Slot Resmi","sku":"5000"}]},"page":{"pageType":"product","resourceType":"product","resourceId":9042780979493}};
@@ -695,7 +695,7 @@ var token = match? match[1]: undefined;
 if (!hasLoggedConversion(token)) {
 setCookieIfConversion(token);
 window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true});
-window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true,"referer":"https://conferenceradar.com/"});
+window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":47933651157285,"productId":9042780979493,"productGid":"gid:\/\/shopify\/Product\/9042780979493","name":"JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin - Slot Resmi","price":"5000.00","sku":"5000","brand":"JUDOLBET88","variant":"Slot Resmi","category":"Slot Machines","nonInteraction":true,"referer":"http://conferenceradar.com/"});
 }
 });
 
@@ -1067,7 +1067,7 @@ Products
 </div>
 </details>
 </details-modal>
-<a href="https://conferenceradar.com/" class="header__heading-link link link--text focus-inset"><span class="h2">JUDOLBET88</span></a>
+<a href="http://conferenceradar.com/" class="header__heading-link link link--text focus-inset"><span class="h2">JUDOLBET88</span></a>
 
 <nav class="header__inline-menu">
 <ul class="list-menu list-menu--inline" role="list"><li><a id="HeaderMenu-home" class="header__menu-item list-menu__item link link--text focus-inset">
@@ -1149,7 +1149,7 @@ Products
 "sameAs": [
 ""
 ],
-"url": "https://conferenceradar.com/"
+"url": "http://conferenceradar.com/"
 }
 </script>
 </div>
@@ -1246,7 +1246,7 @@ Open media 1 in modal
 <div class="product__info-wrapper grid__item scroll-trigger animate--slide-in">
 <product-info id="ProductInfo-template--22009923797285__main" data-section="template--22009923797285__main" data-url="/products/JUDOLBET88" class="product__info-container product__column-sticky"><p class="product__text inline-richtext">JUDOLBET88</p><div class="product__title">
 <h1>JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin</h1>
-<a href="https://conferenceradar.com/" class="product__title">
+<a href="http://conferenceradar.com/" class="product__title">
 <h2 class="h1">
 JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin
 </h2>
@@ -1425,7 +1425,7 @@ Share
 <div class="share-button__fallback motion-reduce">
 <div class="field">
 <span id="ShareMessage-template--22009923797285__main" class="share-button__message hidden" role="status"> </span>
-<input type="text" class="field__input" id="ShareUrl-template--22009923797285__main" value="https://conferenceradar.com/" placeholder="Link" onclick="this.select();" readonly="">
+<input type="text" class="field__input" id="ShareUrl-template--22009923797285__main" value="http://conferenceradar.com/" placeholder="Link" onclick="this.select();" readonly="">
 <label class="field__label" for="ShareUrl-template--22009923797285__main">Link</label>
 </div>
 <button class="share-button__close hidden no-js-hidden">
@@ -1485,7 +1485,7 @@ hiddenInput.value = event.currentTarget.value;
 "@context": "http://schema.org/",
 "@type": "Product",
 "name": "JUDOLBET88⚡ Situs Slot Online Mahjong Ways 2 Terpercaya Gampang Maxwin",
-"url": "https://conferenceradar.com/",
+"url": "http://conferenceradar.com/",
 "image": [
 "https://iili.io/JjOhWYu.webp\u0026width=1920"
 ],
@@ -1499,7 +1499,7 @@ hiddenInput.value = event.currentTarget.value;
 "@type" : "Offer","sku": "5000","availability" : "http://schema.org/InStock",
 "price" : 5000.0,
 "priceCurrency" : "IDR",
-"url" : "https:https://conferenceradar.com/"
+"url" : "https:http://conferenceradar.com/"
 }
 ]
 }
@@ -1538,7 +1538,7 @@ padding-bottom: 60px;
 </ul>
 
 <script>
-window.shopUrl = 'https://conferenceradar.com/';
+window.shopUrl = 'http://conferenceradar.com/';
 window.routes = {
 cart_add_url: '',
 cart_change_url: '',
